--- a/pom.xml
+++ b/pom.xml
@@ -61,4 +61,17 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>central</id>
+            <name>a438e7fc804d-releases</name>
+            <url>http://40.83.100.63:8083/artifactory/great-company</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>a438e7fc804d-snapshots</name>
+            <url>http://40.83.100.63:8083/artifactory/great-company</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
